Applied black to notebooks

--- a/notebooks/QC_examples.ipynb
+++ b/notebooks/QC_examples.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qibo import models, gates,hamiltonians,callbacks\n",
+    "from qibo import models, gates, hamiltonians, callbacks\n",
     "from qibo.models import Circuit\n",
     "from qibo.symbols import X, Y, Z, I\n",
     "import igraph as ig\n",
@@ -47,29 +47,37 @@
     "        graph = ig.Graph.Erdos_Renyi(n=qubits, m=num_cz, directed=False, loops=False)\n",
     "    elif num_cz == None:\n",
     "        graph = ig.Graph.Erdos_Renyi(n=qubits, p=p, directed=False, loops=False)\n",
-    "    else: \n",
-    "        print(\"Error: only the number of edges or the probability of adding an edge must be specified\")\n",
+    "    else:\n",
+    "        print(\n",
+    "            \"Error: only the number of edges or the probability of adding an edge must be specified\"\n",
+    "        )\n",
     "\n",
-    "    #adj_mat=graph.get_adjacency()\n",
-    "    #fig, ax = plt.subplots()\n",
-    "    #ig.plot(graph, target=ax, vertex_label=range(qubits))\n",
-    "    #graph.degree()\n",
+    "    # adj_mat=graph.get_adjacency()\n",
+    "    # fig, ax = plt.subplots()\n",
+    "    # ig.plot(graph, target=ax, vertex_label=range(qubits))\n",
+    "    # graph.degree()\n",
     "\n",
     "    edge_list = graph.get_edgelist()\n",
     "\n",
-    "    gates_pull = [gates.X, gates.Y, gates.Z, gates.H] # pull of single-qubit gates\n",
+    "    gates_pull = [gates.X, gates.Y, gates.Z, gates.H]  # pull of single-qubit gates\n",
     "\n",
     "    circuit = models.Circuit(qubits)\n",
     "    for i in range(len(edge_list)):\n",
-    "        rand_tmp = random.randint(0,gate_max) # number of single-qubit gates between CZ\n",
+    "        rand_tmp = random.randint(\n",
+    "            0, gate_max\n",
+    "        )  # number of single-qubit gates between CZ\n",
     "        for j in range(rand_tmp):\n",
-    "            sel_gate = random.choice(gates_pull) # gate selected from the pull\n",
-    "            sel_qubit = random.randint(0,qubits-1) # qubit selected to apply the gate\n",
+    "            sel_gate = random.choice(gates_pull)  # gate selected from the pull\n",
+    "            sel_qubit = random.randint(\n",
+    "                0, qubits - 1\n",
+    "            )  # qubit selected to apply the gate\n",
     "            circuit.add(sel_gate(sel_qubit))\n",
     "\n",
-    "        circuit.add(gates.CZ(edge_list[i][0],edge_list[i][1])) # 2-qubit gate from graph\n",
-    "        \n",
-    "    return(circuit)"
+    "        circuit.add(\n",
+    "            gates.CZ(edge_list[i][0], edge_list[i][1])\n",
+    "        )  # 2-qubit gate from graph\n",
+    "\n",
+    "    return circuit"
    ]
   },
   {
@@ -91,9 +99,9 @@
    ],
    "source": [
     "qubits = 5\n",
-    "num_cz = 10 # total number of 2 qubit gates \n",
-    "p = None # random.uniform(0,1) # probability of adding an edge between two arbitrary edges\n",
-    "gate_max = 7 # max num of single-qubit gates between 2-qubit gates\n",
+    "num_cz = 10  # total number of 2 qubit gates\n",
+    "p = None  # random.uniform(0,1) # probability of adding an edge between two arbitrary edges\n",
+    "gate_max = 7  # max num of single-qubit gates between 2-qubit gates\n",
     "rand_qc = random_circuit(qubits, gate_max, num_cz, p)\n",
     "print(rand_qc.draw())"
    ]
@@ -120,57 +128,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def HIsing(num_qubits,lam):\n",
+    "def HIsing(num_qubits, lam):\n",
     "    # PBC\n",
     "    ham = []\n",
     "    coef = []\n",
-    "    ham.append(tq.paulis.Z(num_qubits-1)*tq.paulis.Z(0)) \n",
+    "    ham.append(tq.paulis.Z(num_qubits - 1) * tq.paulis.Z(0))\n",
     "    coef.append(1.0)\n",
-    "    ham.append(tq.paulis.X(num_qubits-1))\n",
+    "    ham.append(tq.paulis.X(num_qubits - 1))\n",
     "    coef.append(lam)\n",
-    "    for i in range(num_qubits-1):\n",
-    "        ham.append(tq.paulis.Z(i)*tq.paulis.Z(i+1))\n",
+    "    for i in range(num_qubits - 1):\n",
+    "        ham.append(tq.paulis.Z(i) * tq.paulis.Z(i + 1))\n",
     "        coef.append(1.0)\n",
     "        ham.append(tq.paulis.X(i))\n",
     "        coef.append(lam)\n",
-    "    return(ham, coef)\n",
+    "    return (ham, coef)\n",
     "\n",
-    "def HXXZ(num_qubits,delta):\n",
+    "\n",
+    "def HXXZ(num_qubits, delta):\n",
     "    # PBC\n",
     "    ham = []\n",
     "    coef = []\n",
-    "    ham.append(tq.paulis.Z(num_qubits-1)*tq.paulis.Z(0)) \n",
+    "    ham.append(tq.paulis.Z(num_qubits - 1) * tq.paulis.Z(0))\n",
     "    coef.append(delta)\n",
-    "    ham.append(tq.paulis.X(num_qubits-1)*tq.paulis.X(0)) \n",
+    "    ham.append(tq.paulis.X(num_qubits - 1) * tq.paulis.X(0))\n",
     "    coef.append(1.0)\n",
-    "    ham.append(tq.paulis.Y(num_qubits-1)*tq.paulis.Y(0)) \n",
+    "    ham.append(tq.paulis.Y(num_qubits - 1) * tq.paulis.Y(0))\n",
     "    coef.append(1.0)\n",
-    "    for i in range(num_qubits-1):\n",
-    "        ham.append(tq.paulis.Z(i)*tq.paulis.Z(i+1))\n",
+    "    for i in range(num_qubits - 1):\n",
+    "        ham.append(tq.paulis.Z(i) * tq.paulis.Z(i + 1))\n",
     "        coef.append(delta)\n",
-    "        ham.append(tq.paulis.X(i)*tq.paulis.X(i+1))\n",
+    "        ham.append(tq.paulis.X(i) * tq.paulis.X(i + 1))\n",
     "        coef.append(1.0)\n",
-    "        ham.append(tq.paulis.Y(i)*tq.paulis.Y(i+1))\n",
+    "        ham.append(tq.paulis.Y(i) * tq.paulis.Y(i + 1))\n",
     "        coef.append(1.0)\n",
-    "    return(ham, coef)\n",
+    "    return (ham, coef)\n",
     "\n",
-    "def HXXZ(num_qubits,delta):\n",
+    "\n",
+    "def HXXZ(num_qubits, delta):\n",
     "    # split between even and odd sites\n",
-    "    ham_even = delta*tq.paulis.Z(0)*tq.paulis.Z(1)\n",
-    "    ham_even += tq.paulis.X(0)*tq.paulis.X(1)\n",
-    "    ham_even += tq.paulis.Y(0)*tq.paulis.Y(1)\n",
-    "    ham_odd = delta*tq.paulis.Z(num_qubits-1)*tq.paulis.Z(0)\n",
-    "    ham_odd += tq.paulis.X(num_qubits-1)*tq.paulis.X(0)\n",
-    "    ham_odd += tq.paulis.Y(num_qubits-1)*tq.paulis.Y(0)\n",
-    "    for i in range(2,num_qubits-1,2):\n",
+    "    ham_even = delta * tq.paulis.Z(0) * tq.paulis.Z(1)\n",
+    "    ham_even += tq.paulis.X(0) * tq.paulis.X(1)\n",
+    "    ham_even += tq.paulis.Y(0) * tq.paulis.Y(1)\n",
+    "    ham_odd = delta * tq.paulis.Z(num_qubits - 1) * tq.paulis.Z(0)\n",
+    "    ham_odd += tq.paulis.X(num_qubits - 1) * tq.paulis.X(0)\n",
+    "    ham_odd += tq.paulis.Y(num_qubits - 1) * tq.paulis.Y(0)\n",
+    "    for i in range(2, num_qubits - 1, 2):\n",
     "        print(i)\n",
-    "        ham_even += delta*tq.paulis.Z(i)*tq.paulis.Z(i+1)\n",
-    "        ham_even += tq.paulis.X(i)*tq.paulis.X(i+1)\n",
-    "        ham_even += tq.paulis.Y(i)*tq.paulis.Y(i+1)\n",
-    "        ham_odd += delta*tq.paulis.Z(i-1)*tq.paulis.Z(i)\n",
-    "        ham_odd += tq.paulis.X(i-1)*tq.paulis.X(i)\n",
-    "        ham_odd += tq.paulis.Y(i-1)*tq.paulis.Y(i)\n",
-    "    return(ham_even, ham_odd)"
+    "        ham_even += delta * tq.paulis.Z(i) * tq.paulis.Z(i + 1)\n",
+    "        ham_even += tq.paulis.X(i) * tq.paulis.X(i + 1)\n",
+    "        ham_even += tq.paulis.Y(i) * tq.paulis.Y(i + 1)\n",
+    "        ham_odd += delta * tq.paulis.Z(i - 1) * tq.paulis.Z(i)\n",
+    "        ham_odd += tq.paulis.X(i - 1) * tq.paulis.X(i)\n",
+    "        ham_odd += tq.paulis.Y(i - 1) * tq.paulis.Y(i)\n",
+    "    return (ham_even, ham_odd)"
    ]
   },
   {
@@ -191,7 +201,9 @@
    "source": [
     "generator1 = tq.paulis.Y(0)\n",
     "generator2 = tq.paulis.X(0)\n",
-    "circuit = tq.gates.Trotterized(generators=[generator1,generator2], angles=[1.0, 1.0], steps=1)\n",
+    "circuit = tq.gates.Trotterized(\n",
+    "    generators=[generator1, generator2], angles=[1.0, 1.0], steps=1\n",
+    ")\n",
     "tq.draw(circuit)"
    ]
   },
@@ -237,7 +249,7 @@
    "source": [
     "num_qubits = 4\n",
     "param = 0.3\n",
-    "ham,coef = HIsing(num_qubits,param)\n",
+    "ham, coef = HIsing(num_qubits, param)\n",
     "\n",
     "circuit = tq.gates.Trotterized(generators=[ham], angles=coef, steps=1)\n",
     "circuit += tq.gates.Trotterized(generators=[ham], angles=coef, steps=1)\n",
@@ -317,7 +329,7 @@
    "source": [
     "num_qubits = 4\n",
     "param = 0.3\n",
-    "ham_even, ham_odd = HXXZ(num_qubits,param)\n",
+    "ham_even, ham_odd = HXXZ(num_qubits, param)\n",
     "\n",
     "print(ham_even)\n",
     "\n",
@@ -331,7 +343,7 @@
     "c = models.Circuit.from_qasm(openqasmcode)\n",
     "\n",
     "print(c.draw())\n",
-    "#print(c.get_parameters()) # parameters from the RX, RY, SZ gates"
+    "# print(c.get_parameters()) # parameters from the RX, RY, SZ gates"
    ]
   },
   {
@@ -424,8 +436,10 @@
     }
    ],
    "source": [
-    "generator = tq.paulis.X(0)*tq.paulis.Y(1)\n",
-    "circuit5 = tq.gates.Trotterized(generators=[generator], angles=[1.0], steps=1) # acts the same as circuit3\n",
+    "generator = tq.paulis.X(0) * tq.paulis.Y(1)\n",
+    "circuit5 = tq.gates.Trotterized(\n",
+    "    generators=[generator], angles=[1.0], steps=1\n",
+    ")  # acts the same as circuit3\n",
     "\n",
     "tq.draw(circuit5)"
    ]
