--- a/notebooks/Qdislib_Notebook.ipynb
+++ b/notebooks/Qdislib_Notebook.ipynb
@@ -51,10 +51,13 @@
    ],
    "source": [
     "import os\n",
-    "if 'BINDER_SERVICE_HOST' in os.environ:\n",
-    "    ipycompss.start(graph=True,\n",
-    "                    project_xml='../xml/project.xml',\n",
-    "                    resources_xml='../xml/resources.xml')\n",
+    "\n",
+    "if \"BINDER_SERVICE_HOST\" in os.environ:\n",
+    "    ipycompss.start(\n",
+    "        graph=True,\n",
+    "        project_xml=\"../xml/project.xml\",\n",
+    "        resources_xml=\"../xml/resources.xml\",\n",
+    "    )\n",
     "else:\n",
     "    ipycompss.start(graph=True, monitor=1000)  # debug=True, trace=True"
    ]
@@ -107,7 +110,7 @@
    "source": [
     "import numpy as np\n",
     "import qibo\n",
-    "from qibo import models, gates,hamiltonians,callbacks\n",
+    "from qibo import models, gates, hamiltonians, callbacks\n",
     "from qibo.models import Circuit\n",
     "from qibo.symbols import X, Y, Z, I\n",
     "\n",
@@ -172,10 +175,10 @@
    ],
    "source": [
     "# Insert your credentials here\n",
-    "configuration=ConnectionConfiguration(\n",
-    "        username = \"bsc-training\",\n",
-    "        api_key = \"b85b702e-6f94-42be-a876-89a670ebd9f6\",  \n",
-    "    )\n",
+    "configuration = ConnectionConfiguration(\n",
+    "    username=\"bsc-training\",\n",
+    "    api_key=\"b85b702e-6f94-42be-a876-89a670ebd9f6\",\n",
+    ")\n",
     "connection = API(configuration=configuration)\n",
     "connection.ping()"
    ]
@@ -187,8 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#connection.select_device_ids(device_ids=[9])\n",
-    "#connection.list_devices()"
+    "# connection.select_device_ids(device_ids=[9])\n",
+    "# connection.list_devices()"
    ]
   },
   {
@@ -227,29 +230,29 @@
     "    nqubits = 10\n",
     "    circuit = models.Circuit(nqubits)\n",
     "\n",
-    "    \n",
     "    circuit.add(gates.H(0))\n",
-    "    circuit.add(gates.CZ(0,1))\n",
-    "    circuit.add(gates.CZ(2,6))\n",
-    "    circuit.add(gates.RZ(8,np.pi/3))\n",
+    "    circuit.add(gates.CZ(0, 1))\n",
+    "    circuit.add(gates.CZ(2, 6))\n",
+    "    circuit.add(gates.RZ(8, np.pi / 3))\n",
     "\n",
-    "    circuit.add(gates.RY(3,np.pi/5))\n",
-    "    circuit.add(gates.RX(4,np.pi/5))\n",
-    "    circuit.add(gates.CZ(0,2))\n",
-    "    circuit.add(gates.CZ(5,9))\n",
+    "    circuit.add(gates.RY(3, np.pi / 5))\n",
+    "    circuit.add(gates.RX(4, np.pi / 5))\n",
+    "    circuit.add(gates.CZ(0, 2))\n",
+    "    circuit.add(gates.CZ(5, 9))\n",
     "\n",
-    "    circuit.add(gates.CZ(3,5))\n",
-    "    circuit.add(gates.CZ(3,4))\n",
-    "    circuit.add(gates.CZ(6,7))\n",
-    "    circuit.add(gates.RY(7,np.pi/5))\n",
-    "    circuit.add(gates.RZ(1,np.pi/5))\n",
+    "    circuit.add(gates.CZ(3, 5))\n",
+    "    circuit.add(gates.CZ(3, 4))\n",
+    "    circuit.add(gates.CZ(6, 7))\n",
+    "    circuit.add(gates.RY(7, np.pi / 5))\n",
+    "    circuit.add(gates.RZ(1, np.pi / 5))\n",
     "\n",
-    "    circuit.add(gates.CZ(1,5))\n",
-    "    circuit.add(gates.RX(6,np.pi/5))\n",
-    "    circuit.add(gates.CZ(7,8))\n",
+    "    circuit.add(gates.CZ(1, 5))\n",
+    "    circuit.add(gates.RX(6, np.pi / 5))\n",
+    "    circuit.add(gates.CZ(7, 8))\n",
     "\n",
     "    circuit.add(gates.H(9))\n",
     "    return circuit\n",
+    "\n",
     "\n",
     "circuit = entire_circuit()\n",
     "print(circuit.draw())"
@@ -277,7 +280,7 @@
    "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
-    "#wc.circuit_cutting(\"ZZZZZZZZZZ\",circuit, 4)"
+    "# wc.circuit_cutting(\"ZZZZZZZZZZ\",circuit, 4)"
    ]
   },
   {
@@ -318,7 +321,7 @@
    ],
    "source": [
     "circuit = entire_circuit()\n",
-    "qubit, list_subcircuits = wc.split(circuit, (2,13) , True)"
+    "qubit, list_subcircuits = wc.split(circuit, (2, 13), True)"
    ]
   },
   {
@@ -372,12 +375,12 @@
    ],
    "source": [
     "circuit = entire_circuit()\n",
-    "#wc.simulation(\"ZZZZ\", circuit)\n",
+    "# wc.simulation(\"ZZZZ\", circuit)\n",
     "print(\"\\n\")\n",
     "\n",
     "circuit = entire_circuit()\n",
-    "qubit, list_subcircuits = wc.split(circuit, (2,13) , True)\n",
-    "wc.simulation(\"ZZZZZZZZZZ\",qubit,list_subcircuits[0], list_subcircuits[1],90000)"
+    "qubit, list_subcircuits = wc.split(circuit, (2, 13), True)\n",
+    "wc.simulation(\"ZZZZZZZZZZ\", qubit, list_subcircuits[0], list_subcircuits[1], 90000)"
    ]
   },
   {
@@ -397,9 +400,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#circuit = entire_circuit()\n",
-    "#cc.quantum_computer_interactive(\"ZZZZ\", circuit1, circuit2, connection)\n",
-    "#jobs_id = quantum_computer_enqueue(\"ZZZZ\", circuit1, circuit2, connection)"
+    "# circuit = entire_circuit()\n",
+    "# cc.quantum_computer_interactive(\"ZZZZ\", circuit1, circuit2, connection)\n",
+    "# jobs_id = quantum_computer_enqueue(\"ZZZZ\", circuit1, circuit2, connection)"
    ]
   },
   {
@@ -466,26 +469,25 @@
     "    nqubits = 10\n",
     "    circuit = models.Circuit(nqubits)\n",
     "\n",
-    "    \n",
     "    circuit.add(gates.H(0))\n",
-    "    circuit.add(gates.CZ(0,1))\n",
-    "    circuit.add(gates.CZ(2,6))\n",
-    "    circuit.add(gates.RZ(8,np.pi/3))\n",
+    "    circuit.add(gates.CZ(0, 1))\n",
+    "    circuit.add(gates.CZ(2, 6))\n",
+    "    circuit.add(gates.RZ(8, np.pi / 3))\n",
     "\n",
-    "    circuit.add(gates.RY(3,np.pi/5))\n",
-    "    circuit.add(gates.RX(4,np.pi/5))\n",
-    "    circuit.add(gates.CZ(0,2))\n",
-    "    circuit.add(gates.CZ(5,9))\n",
+    "    circuit.add(gates.RY(3, np.pi / 5))\n",
+    "    circuit.add(gates.RX(4, np.pi / 5))\n",
+    "    circuit.add(gates.CZ(0, 2))\n",
+    "    circuit.add(gates.CZ(5, 9))\n",
     "\n",
-    "    circuit.add(gates.CZ(3,5))\n",
-    "    circuit.add(gates.CZ(3,4))\n",
-    "    circuit.add(gates.CZ(6,7))\n",
-    "    circuit.add(gates.RY(7,np.pi/5))\n",
-    "    circuit.add(gates.RZ(1,np.pi/5))\n",
+    "    circuit.add(gates.CZ(3, 5))\n",
+    "    circuit.add(gates.CZ(3, 4))\n",
+    "    circuit.add(gates.CZ(6, 7))\n",
+    "    circuit.add(gates.RY(7, np.pi / 5))\n",
+    "    circuit.add(gates.RZ(1, np.pi / 5))\n",
     "\n",
-    "    circuit.add(gates.CZ(1,5))\n",
-    "    circuit.add(gates.RX(6,np.pi/5))\n",
-    "    circuit.add(gates.CZ(7,8))\n",
+    "    circuit.add(gates.CZ(1, 5))\n",
+    "    circuit.add(gates.RX(6, np.pi / 5))\n",
+    "    circuit.add(gates.CZ(7, 8))\n",
     "\n",
     "    circuit.add(gates.H(9))\n",
     "    return circuit"
@@ -618,7 +620,7 @@
    ],
    "source": [
     "circuit = entire_circuit()\n",
-    "subcircuits = gc.split_gates([3,14], circuit, True)"
+    "subcircuits = gc.split_gates([3, 14], circuit, True)"
    ]
   },
   {
@@ -642,15 +644,15 @@
    ],
    "source": [
     "expectation_value = []\n",
-    "type_gates = type(circuit.queue[3-1])\n",
+    "type_gates = type(circuit.queue[3 - 1])\n",
     "for subcircuit in subcircuits:\n",
     "    subcircuit.add(gates.M(*range(subcircuit.nqubits)))\n",
     "    result = gc.gate_simulation(subcircuit, 90000)\n",
     "    frequencies = gc.gate_frequencies(result)\n",
     "    expec = gc.gate_expectation_value(frequencies, 90000)\n",
     "    expectation_value.append(expec)\n",
-    "expectation_value = compss_wait_on(expectation_value) #IMPORTANT\n",
-    "reconstruct = gc.gate_reconstruction(type_gates, [3,14], expectation_value)\n",
+    "expectation_value = compss_wait_on(expectation_value)  # IMPORTANT\n",
+    "reconstruct = gc.gate_reconstruction(type_gates, [3, 14], expectation_value)\n",
     "print(reconstruct)"
    ]
   },
@@ -808,7 +810,7 @@
     "circuit = entire_circuit()\n",
     "print(circuit.draw())\n",
     "\n",
-    "gc.gate_cutting([3,14],circuit,90000,3,True)"
+    "gc.gate_cutting([3, 14], circuit, 90000, 3, True)"
    ]
   },
   {
