Added notebooks to documentation

--- a/notebooks/Qdislib_Notebook.ipynb
+++ b/notebooks/Qdislib_Notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "15820060-bf08-42a3-ab6b-e6e51ab95d2a",
    "metadata": {},
    "outputs": [],
@@ -37,18 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1adfa269-ee56-4734-85ba-cbb99799afef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The runtime is already running\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "76aced17-090a-4f47-becf-4c3416dafeb3",
    "metadata": {},
    "outputs": [],
@@ -92,21 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9159acad-2bf6-478b-8737-45b8a730f08f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.1.12.dev0'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import qibo\n",
@@ -130,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "09cd86d2-6e1b-4ca5-b06b-ef1af6887355",
    "metadata": {},
    "outputs": [],
@@ -151,28 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f989446e-b019-4786-a5f3-058039071fe6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[qibo-connection] 0.12.0|INFO|2024-01-10 09:04:33]: Storing personal qibo configuration...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'OK'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Insert your credentials here\n",
     "configuration = ConnectionConfiguration(\n",
@@ -185,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c0ca5d83-dc92-4a0f-bd74-b96b2c7d8d4f",
    "metadata": {},
    "outputs": [],
@@ -204,27 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "fcbbb674-a3d5-4096-b5f7-8588584c422f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q0 : ─H─o──────o─────────────────────\n",
-      "q1 : ───Z──────|─────────RZ─o────────\n",
-      "q2 : ─────o────Z────────────|────────\n",
-      "q3 : ─────|─RY─────o─o──────|────────\n",
-      "q4 : ─────|─RX─────|─Z──────|────────\n",
-      "q5 : ─────|──────o─Z────────Z────────\n",
-      "q6 : ─────Z──────|─────o──────RX─────\n",
-      "q7 : ────────────|─────Z─RY──────o───\n",
-      "q8 : ───────RZ───|───────────────Z───\n",
-      "q9 : ────────────Z─────────────────H─\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def entire_circuit():\n",
     "    nqubits = 10\n",
@@ -274,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "440817ff-5311-4c9a-bbee-f450e1e993a1",
    "metadata": {},
    "outputs": [],
@@ -293,32 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a0785f59-0ac6-4c2c-ac82-bdb772543e31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q0: ─H─o──────o────────\n",
-      "q1: ───Z──────|────────\n",
-      "q2: ─────o────Z────────\n",
-      "q3: ─────Z──────o─RX───\n",
-      "q4: ────────────Z─RY─o─\n",
-      "q5: ───────RZ────────Z─\n",
-      "\n",
-      "\n",
-      "q0: ──────────RZ─o───\n",
-      "q1: ─RY───o─o────|───\n",
-      "q2: ─RX───|─Z────|───\n",
-      "q3: ────o─Z──────Z───\n",
-      "q4: ────Z──────────H─\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "qubit, list_subcircuits = wc.split(circuit, (2, 13), True)"
@@ -334,45 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "624178b1-a48e-4350-a4bb-eed29c4477b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "q0: ─H─o──────o────────\n",
-      "q1: ───Z──────|────────\n",
-      "q2: ─────o────Z────────\n",
-      "q3: ─────Z──────o─RX───\n",
-      "q4: ────────────Z─RY─o─\n",
-      "q5: ───────RZ────────Z─\n",
-      "\n",
-      "\n",
-      "q0: ──────────RZ─o───\n",
-      "q1: ─RY───o─o────|───\n",
-      "q2: ─RX───|─Z────|───\n",
-      "q3: ────o─Z──────Z───\n",
-      "q4: ────Z──────────H─\n",
-      "\n",
-      "\n",
-      "Expectation value after circuit cutting and reconstruction: 0.00046869308641978475\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.00046869308641978475"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "# wc.simulation(\"ZZZZ\", circuit)\n",
@@ -395,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "a690a19f-baf2-4f24-9a45-3d8a0dd4775b",
    "metadata": {},
    "outputs": [],
@@ -415,28 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "aca8520a-83dd-4a7a-a2eb-3fc6fe512fdb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The expectation value of Z0*Z1*Z2*Z3*Z4*Z5*Z6*Z7*Z8*Z9 in the entire circuit is  0.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "wc.analytical_solution(\"ZZZZZZZZZZ\", circuit)"
@@ -460,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b5664be6-0891-4b78-9918-7cd77185ebfd",
    "metadata": {},
    "outputs": [],
@@ -495,129 +366,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e4ef3a34-d62e-4715-9b29-d2b690ec5db0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Circuit 1\n",
-      "q0 : ─H─o────o──────────────────\n",
-      "q1 : ───Z────|─────────RZ─S─────\n",
-      "q2 : ─────S──Z──────────────────\n",
-      "q3 : ─────RY─────o─o────────────\n",
-      "q4 : ─────RX─────|─Z────────────\n",
-      "q5 : ──────────o─Z─────S────────\n",
-      "q6 : ─────S────|─────o─RX───────\n",
-      "q7 : ──────────|─────Z─RY───o───\n",
-      "q8 : ─────RZ───|────────────Z───\n",
-      "q9 : ──────────Z──────────────H─\n",
-      "\n",
-      " Circuit 2\n",
-      "q0 : ─H─o────o─────────────────────\n",
-      "q1 : ───Z────|─────────RZ──SDG─────\n",
-      "q2 : ─────S──Z─────────────────────\n",
-      "q3 : ─────RY─────o─o───────────────\n",
-      "q4 : ─────RX─────|─Z───────────────\n",
-      "q5 : ──────────o─Z─────SDG─────────\n",
-      "q6 : ─────S────|─────o─RX──────────\n",
-      "q7 : ──────────|─────Z─RY──────o───\n",
-      "q8 : ─────RZ───|───────────────Z───\n",
-      "q9 : ──────────Z─────────────────H─\n",
-      "\n",
-      " Circuit 3\n",
-      "q0 : ─H─o─────o──────────────────\n",
-      "q1 : ───Z─────|─────────RZ─S─────\n",
-      "q2 : ─────SDG─Z──────────────────\n",
-      "q3 : ─────RY──────o─o────────────\n",
-      "q4 : ─────RX──────|─Z────────────\n",
-      "q5 : ───────────o─Z─────S────────\n",
-      "q6 : ─────SDG───|─────o─RX───────\n",
-      "q7 : ───────────|─────Z─RY───o───\n",
-      "q8 : ─────RZ────|────────────Z───\n",
-      "q9 : ───────────Z──────────────H─\n",
-      "\n",
-      " Circuit 4\n",
-      "q0 : ─H─o─────o─────────────────────\n",
-      "q1 : ───Z─────|─────────RZ──SDG─────\n",
-      "q2 : ─────SDG─Z─────────────────────\n",
-      "q3 : ─────RY──────o─o───────────────\n",
-      "q4 : ─────RX──────|─Z───────────────\n",
-      "q5 : ───────────o─Z─────SDG─────────\n",
-      "q6 : ─────SDG───|─────o─RX──────────\n",
-      "q7 : ───────────|─────Z─RY──────o───\n",
-      "q8 : ─────RZ────|───────────────Z───\n",
-      "q9 : ───────────Z─────────────────H─\n",
-      "\n",
-      " Subcircuit 1\n",
-      "q0: ─H─o───o──────\n",
-      "q1: ───Z───|─RZ─S─\n",
-      "q2: ─────S─Z──────\n",
-      "\n",
-      " Subcircuit 2\n",
-      "q0: ─S──o─RX───\n",
-      "q1: ────Z─RY─o─\n",
-      "q2: ─RZ──────Z─\n",
-      "\n",
-      " Subcircuit 3\n",
-      "q0: ─RY───o─o───\n",
-      "q1: ─RX───|─Z───\n",
-      "q2: ────o─Z───S─\n",
-      "q3: ────Z─────H─\n",
-      "\n",
-      " Subcircuit 4\n",
-      "q0: ─H─o───o────────\n",
-      "q1: ───Z───|─RZ─SDG─\n",
-      "q2: ─────S─Z────────\n",
-      "\n",
-      " Subcircuit 5\n",
-      "q0: ─S──o─RX───\n",
-      "q1: ────Z─RY─o─\n",
-      "q2: ─RZ──────Z─\n",
-      "\n",
-      " Subcircuit 6\n",
-      "q0: ─RY───o─o─────\n",
-      "q1: ─RX───|─Z─────\n",
-      "q2: ────o─Z───SDG─\n",
-      "q3: ────Z─────H───\n",
-      "\n",
-      " Subcircuit 7\n",
-      "q0: ─H─o─────o──────\n",
-      "q1: ───Z─────|─RZ─S─\n",
-      "q2: ─────SDG─Z──────\n",
-      "\n",
-      " Subcircuit 8\n",
-      "q0: ─SDG─o─RX───\n",
-      "q1: ─────Z─RY─o─\n",
-      "q2: ─RZ───────Z─\n",
-      "\n",
-      " Subcircuit 9\n",
-      "q0: ─RY───o─o───\n",
-      "q1: ─RX───|─Z───\n",
-      "q2: ────o─Z───S─\n",
-      "q3: ────Z─────H─\n",
-      "\n",
-      " Subcircuit 10\n",
-      "q0: ─H─o─────o────────\n",
-      "q1: ───Z─────|─RZ─SDG─\n",
-      "q2: ─────SDG─Z────────\n",
-      "\n",
-      " Subcircuit 11\n",
-      "q0: ─SDG─o─RX───\n",
-      "q1: ─────Z─RY─o─\n",
-      "q2: ─RZ───────Z─\n",
-      "\n",
-      " Subcircuit 12\n",
-      "q0: ─RY───o─o─────\n",
-      "q1: ─RX───|─Z─────\n",
-      "q2: ────o─Z───SDG─\n",
-      "q3: ────Z─────H───\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "subcircuits = gc.split_gates([3, 14], circuit, True)"
@@ -625,23 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "22c76059-8ca6-467f-a6d3-dcb6c4dbd99a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Reconstructed expected value:  (-2.145952510287815e-07+0j)\n",
-      "Absolute value of reconstruction  2.145952510287815e-07\n",
-      "Reconstruction value:  -2.145952510287815e-07\n",
-      "(-2.145952510287815e-07+0j)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expectation_value = []\n",
     "type_gates = type(circuit.queue[3 - 1])\n",
@@ -658,154 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "176d6894-b27d-4650-a036-932bbb71b6c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q0 : ─H─o──────o─────────────────────\n",
-      "q1 : ───Z──────|─────────RZ─o────────\n",
-      "q2 : ─────o────Z────────────|────────\n",
-      "q3 : ─────|─RY─────o─o──────|────────\n",
-      "q4 : ─────|─RX─────|─Z──────|────────\n",
-      "q5 : ─────|──────o─Z────────Z────────\n",
-      "q6 : ─────Z──────|─────o──────RX─────\n",
-      "q7 : ────────────|─────Z─RY──────o───\n",
-      "q8 : ───────RZ───|───────────────Z───\n",
-      "q9 : ────────────Z─────────────────H─\n",
-      "\n",
-      " Circuit 1\n",
-      "q0 : ─H─o────o──────────────────\n",
-      "q1 : ───Z────|─────────RZ─S─────\n",
-      "q2 : ─────S──Z──────────────────\n",
-      "q3 : ─────RY─────o─o────────────\n",
-      "q4 : ─────RX─────|─Z────────────\n",
-      "q5 : ──────────o─Z─────S────────\n",
-      "q6 : ─────S────|─────o─RX───────\n",
-      "q7 : ──────────|─────Z─RY───o───\n",
-      "q8 : ─────RZ───|────────────Z───\n",
-      "q9 : ──────────Z──────────────H─\n",
-      "\n",
-      " Circuit 2\n",
-      "q0 : ─H─o────o─────────────────────\n",
-      "q1 : ───Z────|─────────RZ──SDG─────\n",
-      "q2 : ─────S──Z─────────────────────\n",
-      "q3 : ─────RY─────o─o───────────────\n",
-      "q4 : ─────RX─────|─Z───────────────\n",
-      "q5 : ──────────o─Z─────SDG─────────\n",
-      "q6 : ─────S────|─────o─RX──────────\n",
-      "q7 : ──────────|─────Z─RY──────o───\n",
-      "q8 : ─────RZ───|───────────────Z───\n",
-      "q9 : ──────────Z─────────────────H─\n",
-      "\n",
-      " Circuit 3\n",
-      "q0 : ─H─o─────o──────────────────\n",
-      "q1 : ───Z─────|─────────RZ─S─────\n",
-      "q2 : ─────SDG─Z──────────────────\n",
-      "q3 : ─────RY──────o─o────────────\n",
-      "q4 : ─────RX──────|─Z────────────\n",
-      "q5 : ───────────o─Z─────S────────\n",
-      "q6 : ─────SDG───|─────o─RX───────\n",
-      "q7 : ───────────|─────Z─RY───o───\n",
-      "q8 : ─────RZ────|────────────Z───\n",
-      "q9 : ───────────Z──────────────H─\n",
-      "\n",
-      " Circuit 4\n",
-      "q0 : ─H─o─────o─────────────────────\n",
-      "q1 : ───Z─────|─────────RZ──SDG─────\n",
-      "q2 : ─────SDG─Z─────────────────────\n",
-      "q3 : ─────RY──────o─o───────────────\n",
-      "q4 : ─────RX──────|─Z───────────────\n",
-      "q5 : ───────────o─Z─────SDG─────────\n",
-      "q6 : ─────SDG───|─────o─RX──────────\n",
-      "q7 : ───────────|─────Z─RY──────o───\n",
-      "q8 : ─────RZ────|───────────────Z───\n",
-      "q9 : ───────────Z─────────────────H─\n",
-      "\n",
-      " Subcircuit 1\n",
-      "q0: ─H─o───o──────\n",
-      "q1: ───Z───|─RZ─S─\n",
-      "q2: ─────S─Z──────\n",
-      "\n",
-      " Subcircuit 2\n",
-      "q0: ─S──o─RX───\n",
-      "q1: ────Z─RY─o─\n",
-      "q2: ─RZ──────Z─\n",
-      "\n",
-      " Subcircuit 3\n",
-      "q0: ─RY───o─o───\n",
-      "q1: ─RX───|─Z───\n",
-      "q2: ────o─Z───S─\n",
-      "q3: ────Z─────H─\n",
-      "\n",
-      " Subcircuit 4\n",
-      "q0: ─H─o───o────────\n",
-      "q1: ───Z───|─RZ─SDG─\n",
-      "q2: ─────S─Z────────\n",
-      "\n",
-      " Subcircuit 5\n",
-      "q0: ─S──o─RX───\n",
-      "q1: ────Z─RY─o─\n",
-      "q2: ─RZ──────Z─\n",
-      "\n",
-      " Subcircuit 6\n",
-      "q0: ─RY───o─o─────\n",
-      "q1: ─RX───|─Z─────\n",
-      "q2: ────o─Z───SDG─\n",
-      "q3: ────Z─────H───\n",
-      "\n",
-      " Subcircuit 7\n",
-      "q0: ─H─o─────o──────\n",
-      "q1: ───Z─────|─RZ─S─\n",
-      "q2: ─────SDG─Z──────\n",
-      "\n",
-      " Subcircuit 8\n",
-      "q0: ─SDG─o─RX───\n",
-      "q1: ─────Z─RY─o─\n",
-      "q2: ─RZ───────Z─\n",
-      "\n",
-      " Subcircuit 9\n",
-      "q0: ─RY───o─o───\n",
-      "q1: ─RX───|─Z───\n",
-      "q2: ────o─Z───S─\n",
-      "q3: ────Z─────H─\n",
-      "\n",
-      " Subcircuit 10\n",
-      "q0: ─H─o─────o────────\n",
-      "q1: ───Z─────|─RZ─SDG─\n",
-      "q2: ─────SDG─Z────────\n",
-      "\n",
-      " Subcircuit 11\n",
-      "q0: ─SDG─o─RX───\n",
-      "q1: ─────Z─RY─o─\n",
-      "q2: ─RZ───────Z─\n",
-      "\n",
-      " Subcircuit 12\n",
-      "q0: ─RY───o─o─────\n",
-      "q1: ─RX───|─Z─────\n",
-      "q2: ────o─Z───SDG─\n",
-      "q3: ────Z─────H───\n",
-      "\n",
-      "\n",
-      "Reconstructed expected value:  (-3.3289531522633376e-06+0j)\n",
-      "Absolute value of reconstruction  3.3289531522633376e-06\n",
-      "Reconstruction value:  -3.3289531522633376e-06\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(-3.3289531522633376e-06+0j)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "print(circuit.draw())\n",
@@ -831,32 +426,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "91d4cc29-00f1-4ceb-8977-0cb16c363054",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Minimum computational cost of gate cutting:  96\n",
-      "Minimum computational cost of wire cutting:  60\n",
-      "BEST OPTION WIRE:  [(2, 13)]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(2, 13)]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "circuit = entire_circuit()\n",
     "oc.optimal_cut(circuit)"
@@ -872,31 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "4f1679a2-0d9c-4fb4-8c00-2c0abb32e9e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "********************************************************\n",
-      "***************** STOPPING PyCOMPSs ********************\n",
-      "********************************************************\n",
-      "Checking if any issue happened.\n",
-      "Synchronizing all future objects left on the user scope.\n",
-      "Found a list to synchronize: qubit\n",
-      "Found a list to synchronize: list_subcircuits\n",
-      "Found a list to synchronize: subcircuits\n",
-      "Found a list to synchronize: expectation_value\n",
-      "Found a future object: result\n",
-      "Found a future object: frequencies\n",
-      "Found a future object: expec\n",
-      "\t - Could not retrieve object: expec\n",
-      "********************************************************\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ipycompss.stop(sync=True)"
    ]
@@ -935,6 +487,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
