--- a/notebooks/QC_examples.ipynb
+++ b/notebooks/QC_examples.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,21 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q0: ─────o─Y─────o─X─o─────o─────────────Z─────────Z───H───\n",
-      "q1: ─X───Z─H─Y───|───|─H───|─H─o───o───o───────────────────\n",
-      "q2: ───────Z─Y─Z─Z───|─────|───Z───|─Y─|─X─Z─Y─X─o───o─────\n",
-      "q3: ───────X─────────Z─Z───|─Z───Z─Z───|─Y───────Z─H─|───o─\n",
-      "q4: ─Y─Y───────────────H─Z─Z─────Z─────Z─Z───────────Z─Z─Z─\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "qubits = 5\n",
     "num_cz = 10  # total number of 2 qubit gates\n",
@@ -115,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,19 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "circuit: \n",
-      "Trotterized(target=(0,), angle=1.0, generator=+1.0000Y(0))\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator1 = tq.paulis.Y(0)\n",
     "generator2 = tq.paulis.X(0)\n",
@@ -209,19 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "circuit: \n",
-      "Trotterized(target=(0, 1), control=(), angle=1.0, generator=+1.0000Y(0)+1.0000X(1))\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator3 = tq.paulis.Y(0) + tq.paulis.X(1)\n",
     "circuit = tq.gates.Trotterized(generators=[generator3], angles=[1.0], steps=1)\n",
@@ -230,22 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "multiple angles given, but only one generator",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[70], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m param \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.3\u001b[39m\n\u001b[0;32m      3\u001b[0m ham,coef \u001b[38;5;241m=\u001b[39m HIsing(num_qubits,param)\n\u001b[1;32m----> 5\u001b[0m circuit \u001b[38;5;241m=\u001b[39m \u001b[43mtq\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgates\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTrotterized\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenerators\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mham\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mangles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcoef\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msteps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m circuit \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m tq\u001b[38;5;241m.\u001b[39mgates\u001b[38;5;241m.\u001b[39mTrotterized(generators\u001b[38;5;241m=\u001b[39m[ham], angles\u001b[38;5;241m=\u001b[39mcoef, steps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      7\u001b[0m tq\u001b[38;5;241m.\u001b[39mdraw(circuit)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\tequila\\circuit\\gates.py:471\u001b[0m, in \u001b[0;36mTrotterized\u001b[1;34m(generator, steps, angle, control, randomize, *args, **kwargs)\u001b[0m\n\u001b[0;32m    469\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m angle \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    470\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mangles\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 471\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiple angles given, but only one generator\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    472\u001b[0m     angle \u001b[38;5;241m=\u001b[39m kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mangles\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    473\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mException\u001b[0m: multiple angles given, but only one generator"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_qubits = 4\n",
     "param = 0.3\n",
@@ -264,68 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[+1.0000Z(0)Z(3),\n",
-       " +1.0000X(3),\n",
-       " +1.0000Z(0)Z(1),\n",
-       " +1.0000X(0),\n",
-       " +1.0000Z(1)Z(2),\n",
-       " +1.0000X(1),\n",
-       " +1.0000Z(2)Z(3),\n",
-       " +1.0000X(2)]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ham"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "+0.3000Z(0)Z(1)+1.0000X(0)X(1)+1.0000Y(0)Y(1)+0.3000Z(2)Z(3)+1.0000X(2)X(3)+1.0000Y(2)Y(3)\n",
-      "circuit: \n",
-      "Trotterized(target=(0, 1, 2, 3), control=(), angle=1.0, generator=+0.3000Z(0)Z(1)+1.0000X(0)X(1)+1.0000Y(0)Y(1)+0.3000Z(2)Z(3)+1.0000X(2)X(3)+1.0000Y(2)Y(3))\n",
-      "Trotterized(target=(0, 1, 2, 3), control=(), angle=1.0, generator=+0.3000Z(0)Z(3)+1.0000X(0)X(3)+1.0000Y(0)Y(3)+0.3000Z(1)Z(2)+1.0000X(1)X(2)+1.0000Y(1)Y(2))\n",
-      "\n",
-      "q0:     ─o────o─RY─o────o─RY─RX─o────o─RX──────────────────────────────────o── ...\n",
-      "q1:     ─X─RZ─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX──────────────────────────────────X─R ...\n",
-      "q2:     ──────────────────────────────────o────o─RY─o────o─RY─RX─o────o─RX──── ...\n",
-      "q3:     ──────────────────────────────────X─RZ─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX──── ...\n",
-      "\n",
-      "q0: ... ──o─RY─o────o─RY─RX─o────o─RX──────────────────────────────────o────o─ ...\n",
-      "q1: ... Z─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX──────────────────────────────────|────|─ ...\n",
-      "q2: ... ──────────────────────────────o────o─RY─o────o─RY─RX─o────o─RX─|────|─ ...\n",
-      "q3: ... ──────────────────────────────X─RZ─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX─X─RZ─X─ ...\n",
-      "\n",
-      "q0: ... RY─o────o─RY─RX─o────o─RX──────────────────────────────────o────o─RY─o ...\n",
-      "q1: ... ───|────|───────|────|────o────o─RY─o────o─RY─RX─o────o─RX─|────|────| ...\n",
-      "q2: ... ───|────|───────|────|────X─RZ─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX─|────|────| ...\n",
-      "q3: ... RY─X─RZ─X─RY─RX─X─RZ─X─RX──────────────────────────────────X─RZ─X─RY─X ...\n",
-      "\n",
-      "q0: ... ────o─RY─RX─o────o─RX──────────────────────────────────\n",
-      "q1: ... ────|───────|────|────o────o─RY─o────o─RY─RX─o────o─RX─\n",
-      "q2: ... ────|───────|────|────X─RZ─X─RY─X─RZ─X─RY─RX─X─RZ─X─RX─\n",
-      "q3: ... ─RZ─X─RY─RX─X─RZ─X─RX──────────────────────────────────\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_qubits = 4\n",
     "param = 0.3\n",
@@ -348,93 +253,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q0: ─o────o─o────o─\n",
-      "q1: ─|────|─|────|─\n",
-      "q2: ─|────|─|────|─\n",
-      "q3: ─X─RZ─X─X─RZ─X─\n",
-      "[(0.5,), (0.5,)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Circuit depth = 13\n",
-      "Total number of gates = 16\n",
-      "Number of qubits = 4\n",
-      "Most common gates:\n",
-      "cx: 8\n",
-      "rz: 4\n",
-      "rx: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(c.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0,), (0.3,), (1.0,), (0.3,), (1.0,), (0.3,), (1.0,), (0.3,)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "circuit: \n",
-      "Trotterized(target=(0, 1), control=(), angle=1.0, generator=+1.0000X(0)Y(1))\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator = tq.paulis.X(0) * tq.paulis.Y(1)\n",
     "circuit5 = tq.gates.Trotterized(\n",
@@ -454,9 +312,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nb-env",
+   "display_name": "PyCOMPSs",
    "language": "python",
-   "name": "nb-env"
+   "name": "pycompss"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +326,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
