styling and add documentation

--- a/notebooks/Qdislib_Notebook.ipynb
+++ b/notebooks/Qdislib_Notebook.ipynb
@@ -386,12 +386,12 @@
     "type_gates = type(circuit.queue[3 - 1])\n",
     "for subcircuit in subcircuits:\n",
     "    subcircuit.add(gates.M(*range(subcircuit.nqubits)))\n",
-    "    result = gc.gate_simulation(subcircuit, 90000)\n",
-    "    frequencies = gc.gate_frequencies(result)\n",
+    "    result = gc._gate_simulation(subcircuit, 90000)\n",
+    "    frequencies = gc._gate_frequencies(result)\n",
     "    expec = gc.gate_expectation_value(frequencies, 90000)\n",
     "    expectation_value.append(expec)\n",
     "expectation_value = compss_wait_on(expectation_value)  # IMPORTANT\n",
-    "reconstruct = gc.gate_reconstruction(type_gates, [3, 14], expectation_value)\n",
+    "reconstruct = gc._gate_reconstruction(type_gates, [3, 14], expectation_value)\n",
     "print(reconstruct)"
    ]
   },
