--- a/notebooks/Qdislib_Notebook.ipynb
+++ b/notebooks/Qdislib_Notebook.ipynb
@@ -391,7 +391,7 @@
     "    expec = gc.gate_expectation_value(frequencies, 90000)\n",
     "    expectation_value.append(expec)\n",
     "expectation_value = compss_wait_on(expectation_value)  # IMPORTANT\n",
-    "reconstruct = gc._gate_reconstruction(type_gates, [3, 14], expectation_value)\n",
+    "reconstruct = gc.gate_reconstruction(type_gates, [3, 14], expectation_value)\n",
     "print(reconstruct)"
    ]
   },
