add documentation and example jupyter notebook

--- a/notebooks/QC_examples.ipynb
+++ b/notebooks/QC_examples.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_circuit(qubits, gate_max, num_cz, p):\n",
+    "def _random_circuit(qubits, gate_max, num_cz, p):\n",
     "    if p == None:\n",
     "        graph = ig.Graph.Erdos_Renyi(n=qubits, m=num_cz, directed=False, loops=False)\n",
     "    elif num_cz == None:\n",
@@ -90,7 +90,7 @@
     "num_cz = 10  # total number of 2 qubit gates\n",
     "p = None  # random.uniform(0,1) # probability of adding an edge between two arbitrary edges\n",
     "gate_max = 7  # max num of single-qubit gates between 2-qubit gates\n",
-    "rand_qc = random_circuit(qubits, gate_max, num_cz, p)\n",
+    "rand_qc = _random_circuit(qubits, gate_max, num_cz, p)\n",
     "print(rand_qc.draw())"
    ]
   },
