Activate and make pdf.

--- a/notebooks/Qdislib_Notebook.ipynb
+++ b/notebooks/Qdislib_Notebook.ipynb
@@ -76,15 +76,7 @@
       "*    /_~_ _ . - ~                 ~-.~-._              *\n",
       "*                                     ~-.<             *\n",
       "********************************************************\n",
-      "* - Starting COMPSs runtime...                         *\n",
-      "\u0000"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u0000"
+      "* - Starting COMPSs runtime...                         *\n"
      ]
     },
     {
